[package]
name = "executor"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
async-task = "4"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
event-listener = "2"
futures-lite = "1"
futures-util = "0.3"
libc = { version = "0.2" }
mio = { version = "0.8", features = ["os-poll", "os-ext", "net"] }
once_cell = "1"
slab = "0.4"
socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1", default-features = false }
tracing = "0.1"
waker-fn = "1"

[dev-dependencies]
hyper = { version = "0.14", features = [
    "server",
    "http1",
    "client",
    "http2",
    "tcp",
] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "hyper"

[[bench]]
name = "tokio"
harness = false
