[package]
edition = "2021"
license-file = "LICENSE"
name = "executor"
version = "0.1.0"

[dependencies]
async-task = "4"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
event-listener = "5"
futures-lite = "2"
futures-util = "0.3"
libc = { version = "0.2" }
mio = { version = "0.8", features = ["net", "os-ext", "os-poll"] }
pin-project-lite = "0.2"
piper = "0.2"
slab = "0.4"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.0", features = ["io-util"] }
tracing = "0.1"
waker-fn = "1"

[dev-dependencies]
hyper = { version = "0.14", features = [
    "client",
    "http1",
    "http2",
    "server",
    "tcp",
] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
unsend = "0.2"

[[example]]
name = "hyper"

[[bench]]
harness = false
name = "tokio"
